--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-Java 8 In Action/out/
+Java8_In_Action/out/
+*/.idea
 # Eclipse, Netbeans and IntelliJ files
 /.*
 !.gitignore
@@ -9,4 +10,3 @@ Java 8 In Action/out/
 
 # Repository wide ignore mac DS_Store files
 .DS_Store
-Java 8 In Action/.idea/workspace.xml
